# hik_camera_sdk_aarch64

./: README.md  readme
hk_interface_v4/CWrapper/: CHKCamera.cpp  CMakeLists.txt
hk_interface_v4/demo/: CMakeLists.txt  camera_test.cpp
hk_interface_v4/sdk/include/: CHKCamera.h  HCNetSDK.h
plate/: CMakeLists.txt  main.cpp  readme
plate/sdk/include/: plaympeg4.h
